--- a/ClientApp/src/main/resources/templates/home.html
+++ b/ClientApp/src/main/resources/templates/home.html
@@ -57,8 +57,11 @@
   <p>We're glad to see you again.</p>
 
   <!-- Example logout button -->
-  <a href="/logout" class="button">Logout</a>
+  <form action="/logout_request" method="post">
+    <button type="submit">Logout</button>
+  </form>
 </div>
+
 
 </body>
 </html>
