--- a/ClientApp/src/main/resources/templates/register_form.html
+++ b/ClientApp/src/main/resources/templates/register_form.html
@@ -27,7 +27,8 @@
 
     input[type="text"],
     input[type="email"],
-    input[type="password"] {
+    input[type="password"]
+    input[type="role"] {
       width: 100%;
       padding: 0.5rem;
       border: 1px solid #ccc;
@@ -79,6 +80,10 @@
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required>
+    </div>
+    <div class="form-group">
+      <label for="role">Role: doctor/patient (please keep lower case )</label>
+      <input type="role" id="role" name="role" required>
     </div>
     <button type="submit">Register</button>
   </form>
