--- a/ClientApp/src/main/resources/templates/home.html
+++ b/ClientApp/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
       color: #333;
     }
 
-    .email {
+    .name {
       font-weight: bold;
       color: #4CAF50;
     }
@@ -61,7 +61,7 @@
       background-color: #fff;
       border-top: 2px solid #4CAF50;
       width: 100%;
-      max-width: 600px;
+      max-width: 800px;
     }
 
     .toolbar a,
@@ -107,6 +107,7 @@
 
   <!-- Doctor Toolbar -->
   <div th:if="${role == 'doctor'}">
+    <a href="/search">Search Doctor</a>
     <a href="/view_timeslots">View Time Slots</a>
     <a href="/view_schedule">My Schedule</a>
     <a href="/manage_appointments">Manage Appointments</a>
