--- a/ClientApp/src/main/resources/templates/search.html
+++ b/ClientApp/src/main/resources/templates/search.html
@@ -6,7 +6,7 @@
   <title>Search Doctors</title>
 
   <!-- Correct Thymeleaf link for CSS -->
-  <link rel="stylesheet" th:href="@{/static/css/search.css}">
+  <link rel="stylesheet" th:href="@{/css/search.css}">
   <link rel="stylesheet" href="../static/css/search.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
 </div>
 
 <!-- Correct Thymeleaf link for JS -->
-<script th:src="@{/static/js/search.js}"></script>
+<script th:src="@{/js/search.js}"></script>
 <script src="../static/js/search.js"></script>
 </body>
 </html>
