Refine register logic; Add ui for register role; Add logger for incoming request.

--- a/ClientApp/src/main/resources/templates/register_form.html
+++ b/ClientApp/src/main/resources/templates/register_form.html
@@ -77,6 +77,14 @@
       <input type="email" id="email" name="email" required>
     </div>
     <div class="form-group">
+      <label for="role">Role</label>
+      <select name="role" id="role">
+        <option value="">--Please choose an option--</option>
+        <option value="doctor">doctor</option>
+        <option value="patient">patient</option>
+      </select>
+    </div>
+    <div class="form-group">
       <label for="password">Password</label>
       <input type="password" id="password" name="password" required>
     </div>
