--- a/ClientApp/src/main/resources/templates/home.html
+++ b/ClientApp/src/main/resources/templates/home.html
@@ -125,10 +125,18 @@
     }
     return null;
   }
+  function getCookieWithUTF8(name) {
+    let value = `; ${document.cookie}`;
+    let parts = value.split(`; ${name}=`);
+    if (parts.length === 2) {
+      return decodeURIComponent(parts.pop().split(';').shift());
+    }
+    return null;
+  }
   
-  console.log('Email Cookie:', getCookie('email')); // Check if email cookie is available
-  console.log('Name Cookie:', getCookie('name'));   // Check if name cookie is available
-  console.log('Role Cookie:', getCookie('role'));   // Check if role cookie is available
+  console.log('Email Cookie:', getCookieWithUTF8('email')); // Check if email cookie is available
+  console.log('Name Cookie:', getCookieWithUTF8('name'));   // Check if name cookie is available
+  console.log('Role Cookie:', getCookieWithUTF8('role'));   // Check if role cookie is available
 </script>
 </body>
 </html>
