--- a/ClientApp/src/main/resources/templates/timeslots.html
+++ b/ClientApp/src/main/resources/templates/timeslots.html
@@ -29,5 +29,7 @@
 <div th:if="${timeSlots == null || #lists.isEmpty(timeSlots)}">
   <p>No time slots available.</p>
 </div>
+<script th:src="@{/js/timeslots.js}"></script>
+<script src="../static/js/timeslots.js"></script>
 </body>
 </html>
