added create/view request features

--- a/ClientApp/src/main/resources/templates/requests.html
+++ b/ClientApp/src/main/resources/templates/requests.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Time Slots</title>
+  <title>Requests</title>
 </head>
 <body>
 <h1>Requests</h1>
@@ -15,8 +15,10 @@
 <div th:if="${requests}">
   <ul>
     <li th:each="req : ${requests}">
-      <p><strong>Requester:</strong> Should be requester name<span th:text="${req.doctorName}"></span></p>
-      <p><strong>TimeSlot:</strong> <span th:text="${req.tid}"></span></p>
+      <p><strong>Requester ID:</strong> <span th:text="${req.requesterId}"></span></p>
+      <p><strong>Requester Name:</strong> <span th:text="${req.requesterName}"></span></p>
+      <p><strong>Requester Email:</strong> <span th:text="${req.requesterEmail}"></span></p>
+      <p><strong>TimeSlot ID:</strong> <span th:text="${req.tid}"></span></p>
       <p><strong>Description:</strong> <span th:text="${req.description}"></span></p>
       <p><strong>Status:</strong> <span th:text="${req.status}"></span></p>
       <hr>
@@ -26,7 +28,7 @@
 
 <!-- Display message if no time slots -->
 <div th:if="${requests == null || #lists.isEmpty(requests)}">
-  <p>No time slots available.</p>
+  <p>No requests available.</p>
 </div>
 </body>
 </html>
