show all meetings

--- a/ClientApp/src/main/resources/templates/home.html
+++ b/ClientApp/src/main/resources/templates/home.html
@@ -109,6 +109,7 @@
     <a href="/search">Search Doctor</a>
     <a href="/view_my_timeslots">My Schedule</a>
     <a href="/my_requests">My Requests</a>
+    <a href="/view_meetings">My Meetings</a>
   </div>
 
   <!-- Doctor Toolbar -->
@@ -116,7 +117,7 @@
     <a href="/search">Search Doctor</a>
     <a href="/view_my_timeslots">View Time Slots</a>
     <a href="/timeslot_create_form">Create Time Slot</a>
-    <a href="/view_schedule">My Schedule</a>
+    <a href="/view_meetings">My Meetings</a>
     <a href="/my_requests">My Requests</a>
     <a href="/manage_appointments">Manage Appointments</a>
     <!-- Add Create Meeting Button -->
